--- a/package.json
+++ b/package.json
@@ -6,22 +6,30 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
-    "@mui/material": "^5.16.6",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^5.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "framer-motion": "^11.3.24",
     "leaflet": "^1.9.4",
+    "luxon": "^3.5.0",
+    "moment": "^2.30.1",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.3",
+    "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "recharts": "^2.12.7",
     "sweetalert2": "^11.12.4",
     "web-vitals": "^2.1.4"
